# aruco

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
aruco/: CMakeLists.txt  package.xml
aruco/src/: ArucoDetector.cpp  ArucoMarker.cpp  ArucoMarkerInfo.cpp  CornerRefinement.cpp  SquareFinder.cpp
aruco/src/math/: Quadrilateral.cpp  Transformations.cpp  Triangle.cpp
aruco/src/ros/: ArucoNode.cpp
images/: Thumbs.db
launch/: aruco.launch
msg/: Marker.msg
src/: ArucoDetector.cpp  ArucoMarkerInfo.cpp  SquareFinder.cpp
src/ros/: ArucoNode.cpp
