<?xml version="1.0"?>
<package>
	<name>aruco</name>
	<version>1.0.0</version>
	<description>The aruco package can be used to detect, track and calculate pose from aruco markers.</description>
	<maintainer email="tentone@outlook.pt">tentone</maintainer>
	<license>MIT</license>

	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

	<build_depend>image_transport</build_depend>
	<run_depend>image_transport</run_depend>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>std_msgs</build_depend>
	<run_depend>std_msgs</run_depend>
</package>
